# syscall.online

./: .gitmodules  LICENSE  Makefile  ReadMe.md
@/: Dockerfile  Makefile  ReadMe.md  docker-compose.yml  nginx_site.conf
@/src/: Makefile  index.cgi
@/src/ip/: .gitignore  CMakeLists.txt  Makefile  index.cpp
@/src/sunriseandsunset/: CMakeLists.txt  Makefile  hsunriseandsunset.c  hsunriseandsunset.h  index.cpp
@/src/syscalld/: CMakeLists.txt  DeamonLog.cpp  DeamonLog.h  Makefile  ReadMe.md  dbus_interface.cpp  dbus_interface.h  globalvariable.cpp  globalvariable.h  main.cpp  sysloginfo.cpp  sysloginfo.h
@/src/syscalld/cgi/status/: .gitignore  CMakeLists.txt  index.cpp
@/src/syscalld/cmake/: sourcedir.cmake  subdir.cmake
@/src/syscalld/dbus/: syscalld.conf
@/src/syscalld/dbus_interface.d/: CMakeLists.txt
@/src/syscalld/dbus_interface.d/status/: CMakeLists.txt  status.cpp
@/src/syscalld/systemd/: syscalld.service
@/src/syscalld/websockets/: CMakeLists.txt  websockets.cpp  websockets.h
@/src/wasm/: .gitignore  Makefile  ReadMe.md  generate_emscripten_config
@/src/wasm/HCPPGuiTest/: CMakeLists.txt  HCPPGuiTest.cpp
@/src/wasm/PDCurses/: CMakeLists.txt  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsdl.h
@/src/wasm/PDCurses/HShell/: cmd_simmcs51.cpp  main.cpp
@/src/wasm/PDCurses/ModbusTCPClient/: ModbusSocketIo.h  main.cpp
@/src/wasm/base_sdl/: CMakeLists.txt  main.cpp
@/src/wasm/base_sdl2/: CMakeLists.txt  main.cpp
@/src/wasm/common/font/: CMakeLists.txt  font.cpp  font.h
@/src/wasm/common/fsloader/: CMakeLists.txt  fsloader.cpp  fsloader.h
@/src/wasm/common/shell/: CMakeLists.txt  shell_console.html  shell_gui.html
@/src/wasm/helloworld/: CMakeLists.txt  helloworld.cpp
@/src/wasm/monochromescreen/: CMakeLists.txt  main.cpp
@/static/: README.md  _navbar.md  http.md  index.html  source.md  wasm.md  websocket.md
@/static/api/ip/: README.md  example.html  index.html  ip-api.js
@/static/api/sunriseandsunset/: README.md  example.html  index.html  sunriseandsunset-api.js
@/static/api/syscalld/status/: README.md  example.html  index.html  status-api.js
@/static/theme/: block.css  fonts.css  vue.css
@/static/wasm/css/: shell.css
@/static/wasm/js/: shell.js  terminal.js
proxy.wasm/: .dockerignore  Dockerfile  Makefile  ReadMe.md  docker-compose.yml
proxy.wasm/src/: Makefile
proxy.wasm/src/modbus_tcp_tiny_server/: CMakeLists.txt  Makefile  main.cpp
proxy.wasm/src/modbus_tcp_tiny_server/fs/: banner
proxy.wasm/src/s6-service/modbus_tcp_tiny_server/: run
proxy.wasm/src/s6-service/websocket_to_posix_socket/: run
proxy.wasm/src/websocket_to_posix_socket/: CMakeLists.txt  Makefile
proxy.wasm/src/websocket_to_posix_socket/src/: main.cpp  posix_sockets.h  sha1.cpp  socket_registry.cpp  threads.h  websocket_to_posix_proxy.c
